--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,22 +8,20 @@
     <meta name="author" content="{{site.author}}"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
-    <link rel="stylesheet" href="{{site.baseurl}}/assets/css/styles.css" />
-
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700" rel="stylesheet">
+    <link rel="stylesheet" href="{{site.baseurl}}/assets/css/styles.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.2.0/anime.min.js"></script>
 
   </head>
 
-  <body class="hidden">
+  <body>
 
-    {% include header.html %}
-    {% include nav.html %}
-
-    <main class="fixed-margin">
+    <main>
       
       {{ content }}
     
     </main>
 
-    <!-- <script src="{{site.baseurl}}/assets/js/app.js"></script> -->
+    <script src="{{site.baseurl}}/assets/js/main.js"></script>
   </body>
 </html>
