prevent svg from loading before animation starts.

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
 <header>
-  <div id="headerLineDrawing">
+  <div id="headerLineDrawing" class="hidden">
     <svg viewBox="0 0 500 50" xmlns="http://www.w3.org/2000/svg">
       <g fill="none" fill-rule="evenodd" stroke="currentColor" stroke-width="1" class="lines">
         <path d="M 26.863 38.006 L 10.143 38.006 L 10.143 12.006 L 17.023 12.006 L 17.023 32.246 L 26.863 32.246 L 26.863 38.006 Z"/>
