--- a/_includes/header.html
+++ b/_includes/header.html
@@ -23,12 +23,14 @@
     </svg>
   </div>
 
-  <div id="subHeading">
-    <div>[[collaborative performance artist]]</div>
+  <div id="subHeading" class="invisible">
+    [[collaborative performance artist]]
   </div>
 
-  <div id="keepItMovin" class="hidden">
-    &nbsp;
+  <div id="keepItMovinContainer">
+    <div id="keepItMovin" class="hidden">
+      &nbsp;
+    </div>
   </div>
   
 </header>
