--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -4,8 +4,10 @@ layout: default
 
 {% include nav.html %}
 
-<div class="page">
+<main>
+  <div class="page">
 
-  {{ content }}
+    {{ content }}
 
-</div>
+  </div>
+</main>
