--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -42,6 +42,8 @@ img {
 
 header {
   height: 100vh;
+  background: url('../images/cropped-walter-wlodarczyk-2017-05-12-_87a1913.jpg');
+  background-size: cover;
 }
 
 #headerLineDrawing, #subHeading {
@@ -69,6 +71,7 @@ header {
   border-left: 25px solid transparent;
   border-right: 25px solid transparent;
   border-top: 25px solid black;
+  box-sizing: border-box;
 }
 
 .fadeToBlackBg {
@@ -79,9 +82,11 @@ header {
 @keyframes fadeToBlackBg {
   0% {
     background-color: white;
+    filter: saturate(0%) brightness(0%);
   }
   100% {
     background-color: black;
+    filter: saturate(100%) brightness(100%);
   }
 }
 
@@ -107,21 +112,21 @@ header {
 @keyframes blackHotpinkColors {
   0% {
     border-top-color: black;
-    margin-top: 1em;
+    /* margin-top: 1em; */
   }
   25% {
-    margin-top: 1.2em;
+    /* margin-top: 1.2em; */
   }
   50% {
     border-top-color: #f1f;
-    margin-top: 1em;
+    /* margin-top: 1em; */
   }
   75% {
-    margin-top: 1.2em;
+    /* margin-top: 1.2em; */
   }
   100% {
     border-top-color: black;
-    margin-top: 1em;
+    /* margin-top: 1em; */
   }
 }
 
@@ -144,9 +149,9 @@ header {
   animation-duration: 3s;
   color: #f1f;
   text-shadow:
-    0 0 5px #f1f,
-    0 0 10px #f1f,
-    0 0 20px #f1f,
+    /* 0 0 5px #f1f, */
+    /* 0 0 10px #f1f, */
+    /* 0 0 20px #f1f, */
     0 0 40px #f1f,
     0 0 80px #f1f,
     0 0 90px #f1f,
@@ -157,9 +162,9 @@ header {
   0% {
     color: black;
     text-shadow:
-      0 0 5px black,
-      0 0 10px black,
-      0 0 20px black,
+      /* 0 0 5px black, */
+      /* 0 0 10px black, */
+      /* 0 0 20px black, */
       0 0 40px black,
       0 0 80px black,
       0 0 90px black,
@@ -169,9 +174,9 @@ header {
   100% {
     color: #f1f;
     text-shadow:
-      0 0 5px #f1f,
-      0 0 10px #f1f,
-      0 0 20px #f1f,
+      /* 0 0 5px #f1f, */
+      /* 0 0 10px #f1f, */
+      /* 0 0 20px #f1f, */
       0 0 40px #f1f,
       0 0 80px #f1f,
       0 0 90px #f1f,
