--- a/_includes/header.html
+++ b/_includes/header.html
@@ -24,12 +24,12 @@
   </div>
 
   <div id="subHeading" class="invisible">
-    [[collaborative performance artist]]
+    collaborative performance artist
   </div>
 
   <div id="keepItMovinContainer">
     <div id="keepItMovin" class="hidden">
-      &nbsp;
+      see below for upcoming engagements
     </div>
   </div>
   
