tidy home fadez

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -32,3 +32,6 @@ layout: default
 
   </div>
 </main>
+<footer>
+  <a href="https://github.com/lb2410/lorenebouboushian.org" target="_blank" rel="nofollow" title="bRiGhTgReEnDaDaDdYsAuCeSiXtYnIne">made with 🖤 in NYC</a>
+</footer>
