--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,8 +10,8 @@
 
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700" rel="stylesheet">
     <link rel="stylesheet" href="{{site.baseurl}}/assets/css/styles.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.2.0/anime.min.js"></script>
-
+    <script src="{{site.baseurl}}/assets/js/anime.min.js"></script>
+    <script src="{{site.baseurl}}/assets/js/hammer.min.js"></script>
   </head>
 
   <body>
