--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -44,14 +44,65 @@ img {
 
 header {
   height: 100vh;
-  background: url('../images/cropped-walter-wlodarczyk-2017-05-12-_87a1913.jpg');
-  background-size: cover;
+  /* background: url('../images/cropped-walter-wlodarczyk-2017-05-12-_87a1913.jpg');
+  background-size: cover; */
+}
+
+#headerLineDrawing {
+  z-index: 2;
 }
 
 #headerLineDrawing, #subHeading {
   position: relative;
   top: 33vh;
   color: #f1f;
+}
+
+#carousel {
+  position: absolute;
+  top: 0;
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
+}
+
+#carousel #content {
+  display: inline-flex;
+}
+
+#carousel #l svg, #carousel #r svg {
+  height: calc(100vw / 8);
+  max-height: 150px;
+}
+
+#carousel #l, #carousel #r {
+  position: fixed;
+  top: 0;
+  padding-top: calc(50vh - 75px);
+  z-index: 2;
+  height: 100vh;
+  width: 50vw;
+}
+
+#carousel svg:hover line {
+  stroke: gray!important;
+  transition: 1s stroke;
+}
+#carousel #l {
+  left: 0;
+}
+
+#carousel #r {
+  right: 0;
+  text-align: right;
+}
+
+#carousel .imgWrapper {
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  text-align: center; /* well, mostly flex does this */
 }
 
 #subHeading {
@@ -73,8 +124,9 @@ header {
 #keepItMovin {
   padding: 0 6px 6px 6px;
   color: #f1f;
-  background-color: rgba(0,0,0,0.7);
+  /* background-color: rgba(0,0,0,0.7); */
   border-radius: 5px 5px 0 0;
+  font-size: 0.8em;
 }
 
 .fadeToBlackBg {
