--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -70,33 +70,6 @@ header {
   display: inline-flex;
 }
 
-#carousel #l svg, #carousel #r svg {
-  height: calc(100vw / 8);
-  max-height: 150px;
-}
-
-#carousel #l, #carousel #r {
-  position: fixed;
-  top: 0;
-  padding-top: calc(50vh - 75px);
-  z-index: 2;
-  height: 100vh;
-  width: 50vw;
-}
-
-#carousel svg:hover line {
-  stroke: gray!important;
-  transition: 1s stroke;
-}
-#carousel #l {
-  left: 0;
-}
-
-#carousel #r {
-  right: 0;
-  text-align: right;
-}
-
 #carousel .imgWrapper {
   width: 100vw;
   height: 100vh;
@@ -307,6 +280,7 @@ nav a:hover {
 main {
   margin: 1em;
   min-height: 100vh;
+  padding-bottom: 25vh;
 }
 
 .post-meta {
