--- a/_includes/header.html
+++ b/_includes/header.html
@@ -33,13 +33,8 @@
     </div>
   </div>
   <div id="subHeading" class="invisible">
-    collaborative performance artist
-  </div>
-
-  <div id="keepItMovinContainer">
-    <div id="keepItMovin" class="hidden">
-      see below for upcoming engagements
-    </div>
+    <div>collaborative performance artist</div>
+    <div>see below for upcoming engagements</div>
   </div>
   
 </header>
