--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -304,8 +304,11 @@ footer a {
   }
   nav {
     position: static;
-    flex-direction: column;
+    /* flex-direction: column; */
     margin-left: 0.5em;
+    font-size: 1.5em;
+    justify-content: space-between;
+
   }
   nav.homeNav{
     position: absolute;
