improve image carousel

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,9 +9,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.3/tiny-slider.css">
+  
     <link rel="stylesheet" href="{{site.baseurl}}/assets/css/styles.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
     <script src="{{site.baseurl}}/assets/js/anime.min.js"></script>
-    <script src="{{site.baseurl}}/assets/js/hammer.min.js"></script>
+
   </head>
 
   <body>
