--- a/_includes/header.html
+++ b/_includes/header.html
@@ -22,19 +22,22 @@
       </g>
     </svg>
   </div>
-  <div id="carousel">
-    <div id="content">
-        {% for image in site.static_files %}
-          {% if image.path contains 'images/carousel' %}
-            <div class="imgWrapper" style="background:url('{{ site.baseurl }}{{ image.path }}');background-repeat:no-repeat;background-position:center;">
-            </div>
-          {% endif %}
-        {% endfor %}
-    </div>
+
+  <div class="carousel-wrapper">
+    <div class="carousel" tabindex="0">
+      {% for image in site.static_files %}
+        {% if image.path contains 'images/carousel' %}
+          <div class="item">
+            <img src="{{ site.baseurl }}{{ image.path }}" alt="LB performs">
+          </div>
+        {% endif %}
+      {% endfor %}
+      </div>
   </div>
+
   <div id="subHeading" class="invisible">
     <div>collaborative performance artist</div>
     <div>see below for upcoming engagements</div>
   </div>
-  
+
 </header>
