--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -65,26 +65,28 @@ header {
   color: #f1f;
 }
 
-#carousel {
+*:focus {
+  outline: none;
+}
+
+.carousel-wrapper {
   position: absolute;
-  top: 0;
-  width: 100vw;
-  height: 100vh;
+  top: -37px;
+  max-width: 100vw;
   overflow: hidden;
 }
 
-#carousel #content {
-  display: inline-flex;
-}
-
-#carousel .imgWrapper {
+.carousel>.item {
   width: 100vw;
   height: 100vh;
-  display: flex;
-  justify-content: center;
-  text-align: center; /* well, mostly flex does this */
-  background-size: cover !important;
 }
+
+.carousel>.item>img {
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+}
+
 
 #subHeading {
   max-width: 100vw;
@@ -96,23 +98,6 @@ header {
 #subHeading div:first-child {
   margin-bottom: 20vh;
 }
-
-.fadeToBlackBg {
-  animation-name: fadeToBlackBg;
-  animation-duration: 3s;
-  background-color: black;
-}
-@keyframes fadeToBlackBg {
-  0% {
-    background-color: white;
-    filter: saturate(0%) brightness(0%);
-  }
-  100% {
-    background-color: black;
-    filter: saturate(100%) brightness(100%);
-  }
-}
-
 
 .fadeInBorder {
   animation-name: fadeInBorder;
