--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8"/>
-    <title>{% if page.title %} {{ page.title }} | {% endif %} {{ site.name }}</title>
+    <title>{% if page.name %} {{ page.name }} | {% endif %} Lorene Bouboushian</title>
     <meta name="description" content="{{site.description}}"/>
     <meta name="author" content="{{site.author}}"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
