--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -341,7 +341,7 @@ footer a {
   font-size: 1.5em;
 }
 @media (max-width: 600px) {
-  .projectsGrid {
+  .projectsGrid .name {
     padding: 0;
     font-size: 1.25em;
   }
