--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -5,33 +5,6 @@ layout: default
 {% include nav.html %}
 {% include header.html %}
 
-<main>
-  <div class="home">
-
-    {{ content }}
-
-    {%- if site.posts.size > 0 -%}
-      <div class="post-list">
-        {%- for post in site.posts -%}     
-          <h3 class="stickyNav">
-            <a class="post-link" href="{{ post.url | relative_url }}">
-              {{ post.title | escape }}
-            </a>
-            
-          </h3>
-          <div class="post">
-            {%- if site.show_excerpts -%}
-              {{ post.excerpt }}
-            {%- endif -%}
-          </div>
-        {%- endfor -%}
-      </div>
-
-      <!-- <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | relative_url }}">via RSS</a></p> -->
-    {%- endif -%}
-
-  </div>
-</main>
-<footer>
-  <a href="https://github.com/lb2410/lorenebouboushian.org" target="_blank" rel="nofollow" title="bRiGhTgReEnDaDaDdYsAuCeSiXtYnIne">made with 🖤 in NYC</a>
-</footer>
+<div>
+  {{ content }}
+</div>
