carousel thingy :feelsgood:

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -23,8 +23,8 @@
     </svg>
   </div>
 
-  <div class="carousel-wrapper">
-    <div class="carousel" tabindex="0">
+  <div class="mainCarousel-wrapper">
+    <div class="mainCarousel" tabindex="0">
       {% for image in site.static_files %}
         {% if image.path contains 'images/carousel' %}
           <div class="item">
