--- a/_includes/header.html
+++ b/_includes/header.html
@@ -36,7 +36,7 @@
   </div>
 
   <div id="subHeading" class="invisible">
-    <div>collaborative performance artist</div>
+    <div>interdisciplinary performance artist</div>
   </div>
 
 </header>
