--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -372,10 +372,11 @@ footer a {
 }
 .projectsGrid img {
   width: 100%;
+  min-height: 225px;
 }
 
 @media (max-width: 600px) {
-  .projectsGrid .name {
+  .projectsGrid {
     padding: 0;
     font-size: 1.25em;
   }
