--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -18,6 +18,9 @@ a:hover, a.active {
   transition: all 0.5s ease;
   transition-property: color, fill;
 }
+iframe {
+  max-width: 100%;
+}
 
 .hidden {
   display: none;
@@ -379,6 +382,9 @@ footer a {
   .projectsGrid {
     padding: 0;
     font-size: 1.25em;
+    display: flex;
+    flex-direction: column;
+    gap: 4em;
   }
 }
 
